--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Шапка с меню -->
     <header>
         <div class="container">
-            <img src="https://www.zoomlion.com/static/home/images/logo.png" alt="Zoomlion" class="logo">
+            <img src=https://via.placeholder.com/200x100?text=Zoomlion+Logo" alt="Логотип">
             <nav>
                 <ul>
                     <li><a href="#products">Техника</a></li>
@@ -40,7 +40,7 @@
             <h2>Наша техника</h2>
             <div class="product-grid">
                 <div class="product-card">
-                    <img src="https://www.zoomlion.com/uploads/ueditor/image/20220428/1651120124115436.jpg" alt="Вилочный погрузчик">
+                    <img src="https://via.placeholder.com/400x300?text=Forklift" alt="Погрузчик">
                     <h3>Вилочные погрузчики</h3>
                     <p>Грузоподъемность до 10 тонн</p>
                 </div>
