--- a/index.html
+++ b/index.html
@@ -1,14 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-    <title>Zoomlion - Техника</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Zoomlion - Складская техника</title>
     <style>
-        body { font-family: Arial; text-align: center; padding: 50px; }
-        h1 { color: #e30613; }
+        /* Минимальные стили для быстрого старта */
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+        }
+        header {
+            background: #fff;
+            padding: 20px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        .hero {
+            background: #2c3e50;
+            color: white;
+            text-align: center;
+            padding: 80px 20px;
+        }
+        .products {
+            padding: 50px 20px;
+        }
+        footer {
+            background: #333;
+            color: white;
+            text-align: center;
+            padding: 20px;
+        }
     </style>
 </head>
 <body>
-    <h1>Сайт Zoomlion</h1>
-    <p>Идёт техническое обслуживание</p>
+    <header>
+        <h1>Zoomlion</h1>
+    </header>
+
+    <section class="hero">
+        <h2>Профессиональная складская техника</h2>
+        <p>Официальный дилер в России</p>
+    </section>
+
+    <section class="products">
+        <h3>Наша продукция</h3>
+        <ul>
+            <li>Вилочные погрузчики</li>
+            <li>Автокраны</li>
+            <li>Ричстакеры</li>
+        </ul>
+    </section>
+
+    <footer>
+        <p>© 2024 Zoomlion</p>
+        <p>Телефон: +7 (800) 123-45-67</p>
+    </footer>
 </body>
 </html>
