--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
         }
         
         nav ul li a:hover {
-            color: var(--zoomlion-red);
+            color: var(--zoomlion-green);
         }
         
         .hero {
             background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), 
-                        url('https://www.zoomlion.com/uploads/ueditor/image/20220428/1651120124115436.jpg');
+                        url('https://internal-api-drive-stream.feishu.cn/space/api/box/stream/download/preview/GuBabufIioyswFxdwvrczlGknob?mount_point=explorer&preview_type=11&version=7443075842130903041');
             background-size: cover;
             background-position: center;
             color: white;
