--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zoomlion - Официальный дилер складской техники</title>
+    <title>Zoomlion - Официальный дилер складской техники компания Альфа-Трэйд </title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -69,7 +69,7 @@
         
         .hero {
             background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), 
-                        url('https://www.zoomlion.com/uploads/ueditor/image/20220428/1651120124115436.jpg');
+                        url('https://avatars.mds.yandex.net/i?id=abeef0ddf9c35bb330222b039a3b1034_l-5233450-images-thumbs&n=13');
             background-size: cover;
             background-position: center;
             color: white;
