--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <img src="https://yt3.googleusercontent.com/ytc/AIdro_n5htaAmxGtBG0AgC0QTu_xnMQWwMGtlzGW6gQds3McqA=s900-c-k-c0x00ffffff-no-rj" alt="Zoomlion Logo" class="logo">
+                <img src="https://avatars.mds.yandex.net/i?id=7022f43521215b4b91547cd798c8b9d6_l-4547278-images-thumbs&n=13" alt="Zoomlion Logo" class="logo">
                 <nav>
                     <ul>
                         <li><a href="#products">Продукция</a></li>
