--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div class="product-grid">
                 <!-- Вилочные погрузчики -->
                 <div class="product-card">
-                    <img src="https://images.satu.kz/69709773_w640_h640_dizelnyj-vilochnyj-pogruzchik.jpg" alt="Вилочный погрузчик" class="product-img">
+                    <img src="https://asm24.su/assets/images/products/222/fd50-1.png" alt="Вилочный погрузчик" class="product-img">
                     <div class="product-info">
                         <h3>Вилочные погрузчики</h3>
                         <p>Грузоподъемность от 1 до 10 тонн</p>
