--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 
                 <!-- Ножничные подъемники -->
                 <div class="product-card">
-                    <img src="https://arendalulek.ru/assets/photo/podemniki/zoomlion/zs0808hd-1.jpg" alt="Ножничный подъемник" class="product-img">
+                    <img src="https://image.made-in-china.com/2f0j00cCITAsyJemlM/Zs0407DC-4m-Self-Propelled-Electric-Driven-Scissor-Lift.webp" alt="Ножничный подъемник" class="product-img">
                     <div class="product-info">
                         <h3>Ножничные подъемники</h3>
                         <p>Высота подъема до 12 метров</p>
